--- a/formazas.css
+++ b/formazas.css
@@ -37,6 +37,8 @@ header {
 .legszebb {
     background-color: white;
     border-radius: 10px;
+    padding: 9px;
+    margin: 10px 2px 10px 0px;
 }
 
 .vizeink {
